# github-admin-cli

./: .env.example  .gitignore  LICENSE  README.backup.txt  README.md  SECURITY.md  github_editor.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
src/github_admin_cli/: __main__.py  client.py  main.py  utils.py
tests/: test_cli.py  test_smoke.py
